# nano-nova

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
animations/: scene_01_r1cs.py  scene_02_folding.py  scene_03_ivc.py  test_components.py
animations/common/: components.py  theme.py
docs/superpowers/plans/: 2026-03-31-rust-port.md  2026-04-01-manim-animations.md  2026-04-01-norm-sweep.md
docs/superpowers/specs/: 2026-03-31-rust-port-design.md  2026-04-01-manim-animations-design.md  2026-04-01-norm-sweep-design.md
experiments/norm_growth/: decompose.py  lattice_fold_sim.py  monte_carlo.py  plots.py  ring_arithmetic.py
nano_nova/: __init__.py  commitment.py  examples.py  field.py  folding.py  ivc.py  r1cs.py
notebooks/: 01_field_arithmetic.ipynb  02_r1cs_basics.ipynb  03_relaxed_r1cs.ipynb  04_folding_step.ipynb  05_ivc_demo.ipynb  06_norm_growth_analysis.ipynb  07_publication_figures.py  08_ising_ivc.py  09_phase_boundary.py
paper/: section_01_introduction.md  section_02_background.md  section_03_formal_mapping.md  section_04_empirical.md  section_06_discussion.md  section_07_future_work.md
results/: rust_bench.csv
results/norm_growth_v2/: summary.csv
rust/: Cargo.toml
rust/src/: commitment.rs  decompose.rs  examples.rs  field.rs  folding.rs  ivc.rs  lib.rs  matrix.rs  norm_sim.rs  norm_sweep.rs  r1cs.rs  ring.rs
rust/tests/: commitment_tests.rs  cross_validation_tests.rs  decompose_tests.rs  field_tests.rs  folding_tests.rs  ivc_tests.rs  matrix_tests.rs  norm_cross_validation.rs  norm_sim_tests.rs  r1cs_tests.rs  ring_tests.rs
tests/: test_norm_growth.py  test_nova.py
