[project]
name = "nano-nova"
version = "0.1.0"
description = "Educational Python implementation of Nova's R1CS folding scheme"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "galois>=0.4.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "pandas>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
animations = [
    "manim>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
