[project]
name = "nano-nova"
version = "0.1.0"
description = "Educational Python implementation of Nova's R1CS folding scheme"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "galois>=0.4.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "pandas>=2.0",
    "scipy>=1.12",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
animations = [
    "manim>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks/", "experiments/"]

[tool.ruff.lint]
ignore = ["E741"]  # 'l' is standard Nova paper notation for public input count

[tool.pytest.ini_options]
testpaths = ["tests"]
